# rOLS

./: .gitignore  README.md  pyproject.toml
examples/: fama_french_factors.ipynb
rols/: LICENSE  __init__.py  estimators.py  model.py  results.py
