[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rols"
version = "0.1.0"
description = "Vectorized rolling and expanding regression for multi-target, multi-factor time series."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gabin Taibi", email = "gabin.taibi@icloud.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Repository = "TBD"

[tool.setuptools]
packages = ["rols"]