[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rols"
version = "0.1.1"
description = "Vectorized rolling and expanding regression for multi-target, multi-factor time series."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gabin Taibi", email = "gabin.taibi@icloud.com" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/GabinTB/rOLS"

[tool.setuptools]
packages = ["rols"]